# walkback

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: release-npm.yml  release.yml
crates/undo-core/: Cargo.toml
crates/undo-core/src/: diff.rs  effect.rs  journal.rs  lib.rs  meta.rs  store.rs
crates/undo-core/tests/: cli.rs  concurrency.rs  property.rs
crates/undo-napi/: index.d.ts  index.js  package.json
crates/undo-napi/src/: lib.rs
crates/walkback-napi/: package.json
demo/: compensate-test.ts  email-test.ts  mcp-smoke.ts  reversal-test.ts
docs/: agent-instructions.md
site/src/pages/: index.astro
src/: compensate.ts  email.ts  engine.ts  mcp.ts  reversals.ts
src/providers/: email-provider.ts  gmail.ts  outlook.ts
