[workspace]
resolver = "2"
members = [
    "crates/undo-core",
    "crates/undo-napi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/tathagat22/agent-undo"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
filetime = "0.2"
fs2 = "0.4"
notify = "6"
ctrlc = "3"
