[package]
name = "undo-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Ctrl-Z for AI agents — a universal, reversible side-effect time machine with a CLI (`undo`)."
homepage = "https://github.com/tathagat22/agent-undo"
documentation = "https://docs.rs/undo-core"
readme = "README.md"
keywords = ["ai", "agents", "undo", "rollback", "cli"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
rust-version = "1.74"

[lib]
name = "undo_core"
path = "src/lib.rs"

[[bin]]
name = "undo"
path = "src/bin/undo.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
filetime.workspace = true
fs2.workspace = true
notify.workspace = true
ctrlc.workspace = true
similar.workspace = true
